<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/flagImage"
        android:layout_width="40dp"
        android:layout_height="24dp"
        android:contentDescription="@string/flag_description"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">
        <TextView
            android:id="@+id/codeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_code"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/rateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_rate" />
        <TextView
            android:id="@+id/titleTextItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/sample_title" />
    </LinearLayout>
</LinearLayout>
